IMPALA-6435: Disable codegen for CHAR literals.

Currently we do not codegen CHAR types. This change checks
for CHAR literals in a expr and disables codegen.

Change-Id: I7e4e27350c53bc69ce412a004e392e7480214f73
Reviewed-on: http://gerrit.cloudera.org:8080/9102
Reviewed-by: Tim Armstrong <tarmstrong@cloudera.com>
Tested-by: Impala Public Jenkins